--- a/Styles/styles3.css
+++ b/Styles/styles3.css
@@ -45,7 +45,7 @@
 }
 
 div{ 
-    background-color: rgba(131, 197, 207, 0.2);
+    background-color: rgba(173, 207, 212, 0.2);
     border-radius: 2px;
     border-width: 2px;
     margin-top: auto;
@@ -83,6 +83,8 @@ div{
     object-position: center;
     padding: 10px;
     min-height: 40;
+    background-color: aqua;
+}
     
 
 .c2-item{
@@ -120,7 +122,7 @@ h1{
 }
 
 body{
-    background-color: rgb(35, 123, 225);
+    background-color: rgb(0, 255, 102);
     background-image: url(/Images/Fireworks3.jpg);    
 }
 
