--- a/Styles/styles3.css
+++ b/Styles/styles3.css
@@ -53,44 +53,50 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    
 }
 #mainbox{
     position: absolute;
     margin: 50px;
     padding: 50px;
+
+    background-color: rgba(173, 207, 212, 0.2);
 }
 
 div{ 
-    background-color: rgba(173, 207, 212, 0.2);
-    border-radius: 2px;
-    border-width: 2px;
-    margin-top: auto;
+   
+
+    /* margin-top: auto;
     margin-bottom: auto;
     margin-right: auto;
-    margin-left: auto;
+    margin-left: auto; */
 }
 
 .container2{
-    width: 1344px;
-    border: 3px solid rgb(0, 255, 208);
-    object-position:left;
-    padding: 10px;
-    min-height: 40;
-    background-color: rgb(95, 169, 169);
-
     display: grid;
-    grid-template: 100px / auto auto auto auto auto;
-    grid-gap: 10px;
+    grid-template-columns: 180px 100px 180px 100px 180px 100px 180px 100px 100px;
+    column-gap: 10px;
+    background-color: rgba(173, 207, 212, 0.2);
+    
+    
 }
     
 
+/* width: 1344px;
+border: 3px solid rgb(0, 255, 208);
+object-position:left;
+padding: 10px;
+min-height: 40;
+background-color: rgb(95, 169, 169); */
+
+
 .container2 > div{
     width: 200px;
-    padding: 5px;
-    border-radius: 1px;
-    column-gap: 10px;
+    padding: 10px;
+    margin-top: 10px;
     
-    font-size: 5px;
+    
+    font-size: 10px;
     font-style: italic;
     font-weight: 10%;
 }
@@ -107,7 +113,7 @@ img.option2 {
     background: transparent;
     border: 5px solid rgba(116, 141, 153, 0.2);
     border-radius: 5px;
-    max-width: 50%;
+    max-width: 80%;
     
 }
 
@@ -122,16 +128,21 @@ h1{
 }
 
 body{
-    background-color: rgb(0, 255, 102);
-    background-image: url(/Images/Fireworks3.jpg);    
+    background-color: rgb(255, 255, 255);
+    background-image: url(/Images/bg1.jpg);    
+    background-size: 100%;
 }
 
 .container3{
-    display: inline-grid;
+    display: grid;
     width: 1344px;
-    border: 3px solid rgb(0, 255, 208);
     object-position: center;
     padding: 10px;
     min-height: 40;
-    background-color: aqua;
+    background-color: rgb(50, 160, 140);;
+}
+
+#mapbox{
+    background-color: rgb(117, 201, 214);
+    background-size: 100%;
 }
