--- a/Styles/styles4.css
+++ b/Styles/styles4.css
@@ -69,10 +69,12 @@ div{
 .selectednav{
     background-color: #111;
 }
-.logo {
-    width: auto;
-    height: 50px;
-    text-align: center;
+
+.logo{
+    height: 2%;
+    width: 4%;
+    padding: 5px;
+    margin: 5px;
 }
 body{
     background-color:rgba(27, 204, 228, 0.5);
@@ -145,4 +147,10 @@ h4{
 body{
     width: auto;
     overflow:inherit;
+}
+
+h2{
+    color:white;
+    font-size: 12px;
+    text-align: center;
 }
